[package]
name = "pipelight_error"
publish = true
version = "0.2.15"
edition = "2021"
license = "GPL-2.0-only"
description = "Pipeligh Error types"

[dependencies]

miette = { workspace = true }
thiserror = { workspace = true }
bon.workspace = true

serde_json = { workspace = true }

serde_yaml = { workspace = true }
toml = { workspace = true, features = ["parse", "preserve_order"] }
hcl-rs = { workspace = true }
